[tool.poetry]
name = "superscript"
version = "0.0.1"
description = "Shortcuts for anything, the fun way"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
